feat: remove unused content

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -11,17 +11,18 @@
 
 		<div class='flex flex-row items-center justify-center gap-x-5 sm:gap-x-7'>
 			<a
-				href='/blog'
+				href='/projects'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
 				aria-label='Nav Menu Item'
-				>Blog
+				>Projects
 			</a>
-			<a
-				href='/tools'
-				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
-				aria-label='Nav Menu Item'
-				>Tools
-			</a>
+
+      <a
+      href='/experience'
+      class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
+      aria-label='Nav Menu Item'
+      >Experience
+    </a>
 
 			<button
 				id='toggleDarkMode'
