feat: add contact info

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -55,7 +55,7 @@ const DEVELOPMENT = [
 ]
 ---
 
-<PageLayout meta={{ title: 'Home' }}>
+<PageLayout meta={{ title: 'Projects' }}>
 	<div class='w-full'>
 		<Button title='Back' href='/' style='button'>
 			<svg
