--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,5 +1,7 @@
 ---
-
+import { cn } from '@/utils'
+import { Image } from 'astro:assets'
+import logo from '../../assets/ali-logo.png'
 ---
 
 <header class='mb-12 flex w-full flex-wrap pb-3 text-sm sm:flex-nowrap sm:justify-start'>
@@ -7,7 +9,10 @@
 		class='relative mx-auto flex w-full items-center justify-between sm:flex sm:items-center'
 		aria-label='global'
 	>
-		<a class='flex-none text-xl font-semibold' href='/' aria-label='Brand'>resume</a>
+		<a class='flex items-center gap-4 text-xl font-semibold' href='/' aria-label='Brand'>
+			<Image src={logo} alt='dasda' loading='eager' class='h-6 w-6 md:h-8 md:w-8' />
+			<p class='hidden md:block'>AliRafli</p></a
+		>
 
 		<div class='flex flex-row items-center justify-center gap-x-5 sm:gap-x-7'>
 			<a
@@ -17,12 +22,12 @@
 				>Projects
 			</a>
 
-      <a
-      href='/experience'
-      class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
-      aria-label='Nav Menu Item'
-      >Experience
-    </a>
+			<a
+				href='/experience'
+				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
+				aria-label='Nav Menu Item'
+				>Experience
+			</a>
 
 			<button
 				id='toggleDarkMode'
