feat: add education

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -128,20 +128,20 @@ const blogs = [
 
 		<Section title='Education'>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
-				imagePath='/src/assets/about-astro.png'
+				heading='Brawijaya University'
+				subheading='Bachelor of Information Technology - GPA 3.76/4.00'
+				date='Dec 2020 - Feb 2024'
+				imagePath='/src/assets/brawijaya-logo.png'
 				altText='Lorem, ipsum dolor sit'
 				imageClass='h-12 w-auto md:-left-16'
 			>
+				<p>Relevant Coursework</p>
 				<ul class='ml-4 list-disc text-muted-foreground'>
-					<li>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis recusandae, ut
-						molestiae laboriosam pariatur!
-
-						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, pariatur!</li>
-					</li>
+					<li>Software Engineering</li>
+					<li>Algorithms</li>
+					<li>Databases</li>
+					<li>System Design</li>
+					<li>Website</li>
 				</ul>
 			</Card>
 		</Section>
