--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,12 @@ const contactInfo = [
 		disabled: true
 	},
 	{
+		title: 'Resume',
+		icon: 'mdi:file-document-outline',
+		href: '/src/assets/CV_Mohammad Ali Rafli.pdf',
+		disabled: false
+	},
+	{
 		title: 'Linkedin',
 		icon: 'mdi:linkedin',
 		href: 'https://www.linkedin.com/in/mohammad-ali-rafli/',
