--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Card from '../components/Card.astro'
 import ProjectCard from '../components/ProjectCard.astro'
 import Label from '../components/Label.astro'
 import SkillLayout from '../components/SkillLayout.astro'
+import { experiences } from '@/data/experiences.tsx'
 
 import { Image } from 'astro:assets'
 import { Icon } from 'astro-icon/components'
@@ -54,54 +55,6 @@ const blogs = [
 		href: 'https://medium.com/@mrafli1212/implementing-jest-image-snapshot-in-a-reactjs-typescript-project-with-puppeteer-for-visual-slicing-fd91b33fe5c4'
 	}
 ]
-
-const experiences = [
-	{
-		title: 'Delos',
-		role: 'Frontend Web Developer Intern',
-		date: 'Jun 2023 - Mar 2024',
-		imagePath: '/src/assets/delos-logo.png',
-		desc: [
-			'Enhancing and managing product line dashboards for efficient data management, utilizing Next.js and TypeScript for dashboard improvements and code optimization. Additionally, contributed to the design system by creating and refining components with TypeScript and Storybook, significantly improving interface consistency and usability across products.'
-		]
-	},
-	{
-		title: 'Ruangguru Bootcamp - Kampus Merdeka',
-		role: 'Frontend Engineering',
-		date: 'Jan 2023 - Jul 2023',
-		imagePath: '/src/assets/ruangguru-logo.png',
-		desc: [
-			"Learning web frontend skills through the MBKM program's Bootcamp Learning Plan, focusing on JavaScript and React.js in both basic and advanced front-end development."
-		]
-	},
-	{
-		title: 'Social Circles Co.',
-		role: 'Software Engineer Intern',
-		date: 'Dec 2022 - Mar 2023',
-		imagePath: '/src/assets/socles-logo.jpg',
-		desc: [
-			'Played a key role in the development of the Socles Social App, employing React Native Ignite (Typescript), and the Socles Web App, using Next.js (Typescript), contributing to significant user engagement growth.'
-		]
-	},
-	{
-		title: 'Basic Computing Community (BCC)',
-		role: 'Head of Frontend Department',
-		date: 'Dec 2022 - Oct 2023',
-		imagePath: '/src/assets/bcc-logo.png',
-		desc: [
-			'Oversaw and led multiple key projects, including software development and internal workshops, driving the enhancement of technical skills within the community.'
-		]
-	},
-	{
-		title: 'Basic Computing Community (BCC)',
-		role: 'Deputy Head of Frontend Department',
-		date: 'Jan 2022 - Dec 2022',
-		imagePath: '/src/assets/bcc-logo.png',
-		desc: [
-			'Oversaw and led multiple key projects, including software development and internal workshops, driving the enhancement of technical skills within the community.'
-		]
-	}
-]
 ---
 
 <PageLayout meta={{ title: 'Home' }}>
@@ -146,22 +99,35 @@ const experiences = [
 
 		<Section title=`Experience (${experiences.length})`>
 			{
-				experiences.map((data) => (
+				experiences.slice(0, 4).map((data) => (
 					<Card
 						heading={data.title}
 						subheading={data.role}
 						date={data.date}
 						imagePath={data.imagePath}
 						altText={data.title}
+						multiple={data.multiple}
+						multipleData={data.multipleData}
 						imageClass='h-12 w-12 object-contain md:-left-16 rounded-xl'
 					>
 						<ul class='ml-4 list-disc text-muted-foreground'>
-							{data.desc.map((data) => (
+							{data?.desc?.map((data) => (
 								<li>{data}</li>
 							))}
 						</ul>
 					</Card>
 				))
+			}
+
+			{
+				experiences.length > 4 && (
+					<Card
+						heading={`See More (+${experiences.length - 4})`}
+						headingCenter
+						href='/experience'
+						as='a'
+					/>
+				)
 			}
 		</Section>
 
