--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -3,6 +3,11 @@ import { Icon } from 'astro-icon/components'
 
 const contactInfo = [
 	{
+		title: 'Github',
+		icon: 'mdi:github',
+		href: 'https://github.com/alirafli'
+	},
+	{
 		title: 'Linkedin',
 		icon: 'mdi:linkedin',
 		href: 'https://www.linkedin.com/in/mohammad-ali-rafli/'
