--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,6 +70,7 @@ const others = ['Java']
 						imagePath={data.imagePath}
 						altText={data.title}
 						multiple={data.multiple}
+						multipleData={data?.multipleData}
 						imageClass='h-12 w-12 object-contain md:-left-16 rounded-xl'
 					>
 						<ul class='ml-4 list-disc text-muted-foreground'>
@@ -105,8 +106,7 @@ const others = ['Java']
 						multiple={data.multiple}
 						sourceCode={data?.sourceCode}
 						result={data?.result}
-						multipleData={data.multipleData}
-            techStack={data?.techStack}
+						techStack={data?.techStack}
 						imageClass='h-12 w-12 object-contain md:-left-16 rounded-xl'
 					>
 						<ul class='ml-4 list-disc text-muted-foreground'>
@@ -119,9 +119,9 @@ const others = ['Java']
 			}
 
 			{
-				experiences.length > 4 && (
+				activities.length > 4 && (
 					<Card
-						heading={`See More (+${experiences.length - 4})`}
+						heading={`See More (+${activities.length - 4})`}
 						headingCenter
 						href='/experience'
 						as='a'
