feat: add activities pages

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -26,7 +26,14 @@ import logo from '../../assets/ali-logo.png'
 				href='/experience'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
 				aria-label='Nav Menu Item'
-				>Experience
+				>Experiences
+			</a>
+
+			<a
+				href='/activities'
+				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
+				aria-label='Nav Menu Item'
+				>Activities
 			</a>
 
 			<button
