--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ const others = ['Java']
 			</p>
 		</Section>
 
-		<Section title=`Experience (${experiences.length})`>
+		<Section title=`Experiences (${experiences.length})`>
 			{
 				experiences.slice(0, 4).map((data) => (
 					<Card
