fix: change see more url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,7 +125,7 @@ const dataShown = 3
 					<Card
 						heading={`See More (+${activities.length - dataShown})`}
 						headingCenter
-						href='/experience'
+						href='/activities'
 						as='a'
 					/>
 				)
