--- a/src/pages/experience/index.astro
+++ b/src/pages/experience/index.astro
@@ -39,6 +39,7 @@ import Card from '@/components/Card.astro'
 						imagePath={data.imagePath}
 						altText={data.title}
             multiple={data.multiple}
+						techStack={data?.techStack}
 						imageClass='h-12 w-12 object-contain md:-left-16 rounded-xl'
 					>
 						<ul class='ml-4 list-disc text-muted-foreground'>
