--- a/src/pages/activities/index.astro
+++ b/src/pages/activities/index.astro
@@ -39,6 +39,9 @@ import Card from '@/components/Card.astro'
 						altText={data.title}
 						multiple={data.multiple}
 						multipleData={data?.multipleData}
+            sourceCode={data?.sourceCode}
+						result={data?.result}
+						techStack={data?.techStack}
 						imageClass='h-12 w-12 object-contain md:-left-16 rounded-xl'
 					>
 						<ul class='ml-4 list-disc text-muted-foreground'>
