--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,6 +72,7 @@ const dataShown = 3
 						imagePath={data.imagePath}
 						altText={data.title}
 						multiple={data.multiple}
+						techStack={data?.techStack}
 						imageClass='h-12 w-12 object-contain md:-left-16 rounded-xl'
 					>
 						<ul class='ml-4 list-disc text-muted-foreground'>
