--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -23,24 +23,26 @@ const contactInfo = [
 		href: 'https://www.instagram.com/alirafli_/'
 	}
 ]
+
+const currentYear = new Date().getFullYear();
 ---
 
-<footer class='mx-auto mt-24 w-full'>
-	<div class='border-t border-border pt-5'>
+<footer class='w-full mx-auto mt-24'>
+	<div class='pt-5 border-t border-border'>
 		<div
 			class='flex flex-col items-center gap-y-3 sm:flex sm:flex-row sm:items-center sm:justify-between sm:gap-y-0'
 		>
-			<div class='flex gap-x-4 text-sm'>
+			<div class='flex text-sm gap-x-4'>
 				<!-- <a
-          class='inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
+          class='inline-flex text-gray-600 gap-x-2 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
           href='/terms'>Terms</a
         >
 
         <a
-          class='inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
+          class='inline-flex text-gray-600 gap-x-2 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
           href='/privacy'>Privacy</a
         > -->
-				<p class=''>© 2024. All rights reserved.</p>
+				<p class=''>© {currentYear}. All rights reserved.</p>
 			</div>
 
 			<div class='flex items-center justify-between'>
@@ -50,7 +52,7 @@ const contactInfo = [
 					{
 						contactInfo.map((data) => (
 							<a
-								class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
+								class='inline-block transition-all text-muted-foreground hover:text-muted-foreground/75'
 								href={data.href}
 								target='_blank'
 							>
