--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,16 +1,15 @@
 ---
-import { cn } from '@/utils'
 import { Image } from 'astro:assets'
 import logo from '../../assets/ali-logo.png'
 ---
 
-<header class='mb-12 flex w-full flex-wrap pb-3 text-sm sm:flex-nowrap sm:justify-start'>
+<header class='flex flex-wrap w-full pb-3 mb-12 text-sm sm:flex-nowrap sm:justify-start'>
 	<nav
-		class='relative mx-auto flex w-full items-center justify-between sm:flex sm:items-center'
+		class='relative flex items-center justify-between w-full mx-auto sm:flex sm:items-center'
 		aria-label='global'
 	>
 		<a class='flex items-center gap-4 text-xl font-semibold' href='/' aria-label='Brand'>
-			<Image src={logo} alt='dasda' loading='eager' class='h-6 w-6 md:h-8 md:w-8' />
+			<Image src={logo} alt='dasda' loading='eager' class='w-6 h-6 md:h-8 md:w-8' />
 			<p class='hidden md:block'>AliRafli</p></a
 		>
 
