--- a/src/pages/activities/index.astro
+++ b/src/pages/activities/index.astro
@@ -5,7 +5,7 @@ import { activities } from '@/data/activities.tsx'
 import Card from '@/components/Card.astro'
 ---
 
-<PageLayout meta={{ title: 'Experience' }}>
+<PageLayout meta={{ title: 'Activities' }}>
 	<div class='w-full'>
 		<Button title='Back' href='/' style='button'>
 			<svg
@@ -23,7 +23,7 @@ import Card from '@/components/Card.astro'
 			</svg>
 		</Button>
 
-		<div class='mt-5 flex w-full flex-col gap-y-10'>
+		<div class='flex flex-col w-full mt-5 gap-y-10'>
 			<div>
 				<h1 class='mb-1 text-2xl font-bold'>Activities ({activities.length})</h1>
 				<p>activities that I have participated in to develop myself</p>
