--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,15 +15,15 @@ import { Image } from 'astro:assets'
 import { Icon } from 'astro-icon/components'
 import profile from '../assets/profile-picture.jpg'
 const languages = ['Indonesia', 'English']
-const frontend = ['HTML', 'Javascript', 'ReactJS', 'React Native', 'NextJS', 'Typescript']
-const styling = ['CSS', 'SASS', 'Tailwind', 'Styled Components']
+const frontend = ['HTML', 'Javascript', 'ReactJS', 'React Native', 'NextJS', 'Typescript', 'SSR']
+const styling = ['CSS', 'SASS', 'Tailwind', 'Styled Components', 'Material-UI']
 const others = ['Java']
 
 const dataShown = 3
 ---
 
 <PageLayout meta={{ title: 'Home' }}>
-	<div class='flex w-full flex-col gap-y-10'>
+	<div class='flex flex-col w-full gap-y-10'>
 		<section class='flex flex-col items-center gap-y-7'>
 			<Image
 				src={profile}
@@ -177,6 +177,24 @@ const dataShown = 3
 
 		<Section title='Education'>
 			<Card
+				heading='University of Indonesia'
+				subheading='Master of Information Technology'
+				date='Jan 2024 - Now'
+				imagePath='/src/assets/Makara_of_Universitas_Indonesia.svg.png'
+				altText='Lorem, ipsum dolor sit'
+				imageClass='h-12 w-auto md:-left-16'
+			>
+				<!-- <p>Relevant Coursework</p>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>Software Engineering</li>
+					<li>Algorithms</li>
+					<li>Databases</li>
+					<li>System Design</li>
+					<li>Website</li>
+				</ul> -->
+			</Card>
+
+      <Card
 				heading='Brawijaya University'
 				subheading='Bachelor of Information Technology - GPA 3.76/4.00'
 				date='Dec 2020 - Feb 2024'
